--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -8,9 +8,9 @@ metadata:
   namespace: {{ .Values.namespace.name }}
 spec:
   ports:
-  - port: {{ .Values.image.port }}
+  - port: {{ .Values.service.port }}
     protocol: TCP
-    targetPort: {{ .Values.image.port }}
+    targetPort: {{ .Values.service.port }}
   selector:
     app: nginx
     tag: {{ .Values.image.tag }}
